--- a/src/Container/CartView/Cart.css
+++ b/src/Container/CartView/Cart.css
@@ -1,14 +1,57 @@
-.red {
-    color: red;
+.partesProd{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+.prod{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 10rem;
+    text-align: center;
+    padding: 2px;
+    height: 3rem;
+    font-size:larger;
 }
 
-.green {
-    color: green
+.prodImg{
+    height: 10rem;
+    margin-left: 2rem;
+}
+.btnDelete{
+    width: 3rem;
+    background-color:antiquewhite ;
+    border-radius: 5px;
+    margin-right: 2rem;
+}
+.prodList{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-top: 1rem;
+    padding: 1rem 0;
 }
 
-.blue {
-    color: blue;
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+    border-radius: 20px ;
+    box-shadow: 5px 5px 5px 5px rgba(32, 32, 32, 0.37);
 }
-.size {
-    font-size: 50px;
+label{
+    text-align: center;
+    margin: 3px;
 }
+
+.btnFinalizar{
+    width: 15rem;
+    margin: 3px;    
+}
+
